# hexahedron

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/hexahedron/client/: client.hpp  window.hpp
client/src/: client.cpp
include/hexahedron/: hexahedron.hpp
src/: hexahedron.cpp
